--- a/Portfolio/app.css
+++ b/Portfolio/app.css
@@ -44,14 +44,14 @@ button:focus {outline:none !important}
 	transform: rotate(90deg);
 }
 
-.button1{
+/*.button1{
 	padding: 8px 32px;
 	border-radius: 15px;
 	background-color: transparent;
 	cursor: not-allowed;
 	border: 2px solid #f73636;
 	transition: background-color 0.5s ease;
-}
+}*/
 
 a img{
     transition: transform 1s ease-in-out;
@@ -96,17 +96,13 @@ a img:hover{
 	background: #99e6ff;
 }
 
-.skills{
+#skills{
 	border: 2px solid black; 
 	border-radius: 10px;
 	text-align: center;
 }
 
-.divider{
-	border-right: 1px solid black;
-}
-
-.divider div:nth-child(2){
+.list{
 	text-align: left;
 }
 
@@ -114,6 +110,26 @@ a img:hover{
 	margin:0 0 10px 0;
 }
 
-section:nth-child(5){
+#contact{
 	background-color: #e1e3e1;
+	text-align: center;
+	padding: 25px 0;
+}
+
+.divider{
+	border-right: 1px solid black;
+}
+
+.divider.noDivider{
+	border-right: none;
+}
+
+.nav-link{
+	transition: background-color 1s ease;
+	padding: 15px 0;
+	color:#03e8fc;
+}
+
+.nav-link:hover{
+	background-color: #ffffff;
 }
